# fpgai_compiler

./: .gitignore  LICENSE.md  README.md  README_FPGAI_FULL_KNOBS_TUTORIAL.md  ai_model.py  app.py  cnn_infer.cpp  contributing.md  create_onnx_trial.py  example.c  fpgai.yml  fpgai_engine.py  fpgai_train.yml  generated_tcl_vitis.tcl  image_classifier.onnx  image_classifier_1.onnx  image_classifier_1_dynamo_exported.onnx  image_classifier_1_exported.onnx  main.py  mlp.onnx  mnist_model_quantized.onnx  my_image_classifier.onnx  new.py  new_cpp_file.cpp  new_onnx_creater.py  onnx_inference.py  paper.txt  plot_for_paper.py  pyproject.toml  read.md  repo_cleanup_review.py  report_dynamo_export.sarif  requirements.txt  run_vitis.sh  setup.py  test_importer.py  testbench.cpp
activation/: activation_functions.py
architectures/: convolution_layer.py  dense_layer.py
c_implementations/: cnn.c
connections/: vitis_hls_con.py
dev_audits/: p0a_existing_report_inventory.json  p0a_existing_report_inventory.md  p0a_report_field_audit.json  p0b_paper_results_patch_notes.md  p1a_existing_model_and_paper_configs.txt  p1a_mlp_mnist_config.txt  p1a_patch_notes.md  p1b_testbench_before_patch.txt  p1b_train_testbench_check.md  p1c_training_ddr_duplicate_mode_fix.md  p1d_training_ddr_tiled_preload_fix.md  r1_no_delete_yet.md  r1_professional_validation_naming.md  r2b_python_deep_usage_audit.json  r2b_python_deep_usage_audit.md  r2c_tool_ownership_audit.json  r2c_tool_ownership_audit.md  r2e_remaining_cli_and_old_terms.json  r3a_build_stage_extraction.md
docs/: CLEANUP_CANDIDATES.md  CLI_WORKFLOWS.md  CONFIG_FIRST_WORKFLOW.md  EXAMPLE_ARTIFACT_SMOKE.md  FEATURE_MATRIX.md  FPGAI_PROJECT_STATUS.md  MEMORY_SEMANTICS_PLAN.md  OPEN_SOURCE_CLEANUP_SPRINTS.md  P3A_PURE_INSPECT.md  P3B_QUIET_LOGGING.md  P7_PUBLIC_CLI_DOCS.md  PAPER_ARTIFACT_POLICY.md  README.md  REPO_CLEANUP_PLAN.md  TESTING.md  YAML_MIGRATION_GUIDE.md  YAML_REPO_AUDIT.json  YAML_REPO_AUDIT.md  YAML_SCHEMA_AUDIT.md  cli_workflows_legacy.md  development_roadmap.md  inspect_command.md  logging.md
evidence/: README.md
example_onnx_files/: my_image_classifier.onnx
examples/: Iris.py  README.md  iris_example_cli.sh
experiments/: README.md
fpgai/: __init__.py  cli.py  numeric.py  toolchain.py
generated_files/: deeplearn.h  hls_output.txt  main.cpp  tcl_for_vitis.tcl  tcl_for_vivado.tcl  testbench.cpp
implementations/: conv_layer_imp.py  dense_layer_imp.py  implementations.py
loss_functions/: loss.py
models/: cnn_mnist.onnx  cnn_mnist.onnx.data  mlp.onnx
onnx_handler/: onnx_reader.py
onnx_handlers/: onnx_reader.py
paper/: paper.bib  paper.md
paper_experiments/: README.md
paper_results/: knob_effect_traceability.csv  knob_effect_traceability.md  master_results.csv  master_results.json  master_results.md  per_knob_traceability.csv  per_knob_traceability.md  yaml_to_hls_cpp_traceability.csv  yaml_to_hls_cpp_traceability.md
reports/: README.md
scripts/: MANIFEST.md  README.md  analyze_fpgai_experiments.py  build_bitstream.py  collect_claim_support_v2.py  collect_comm_ablation.py  collect_paper_evidence.py  collect_vivado_impl_evidence.py  compile.py  (+44 more)
(+831 files in other folders)
