[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpgai-compiler"
version = "1.3.1"
description = "ONNX-to-FPGA/SoC compiler framework for FPGA AI inference and training"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Umut Can Altin" }
]
license = { text = "Academic, educational, and non-commercial research use only" }
keywords = [
  "fpga",
  "hls",
  "onnx",
  "compiler",
  "vitis",
  "machine-learning",
]
dependencies = [
  "numpy>=1.26",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "protobuf>=5.0",
  "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.10",
]

operator-tests = [
  "torch>=2.2",
]

datasets = [
  "torch>=2.2",
  "torchvision>=0.17",
]

[project.scripts]
fpgai = "fpgai.cli:main"

[tool.setuptools.packages.find]
include = ["fpgai*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
ignore = [
  "E501",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "unit: fast tests for pure resolver/config/layer logic",
  "codegen: tests that inspect generated source or HLS interface contracts",
  "validation: numeric validation tests comparing generated artifacts with references",
  "integration: tests that exercise full compiler/user workflows without requiring external FPGA tools",
  "hls: tests requiring Vitis HLS or generated HLS execution",
  "vivado: tests requiring Vivado project/implementation tools",
  "fpga: tests requiring physical FPGA board execution",
  "slow: long-running tests excluded from quick local smoke runs",
]
